--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,21 +23,21 @@
       <div class="collapse navbar-collapse" id="MenuNavegacion">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#hero">Home</a>
+            <a class="nav-link" href="#hero" routerLink="/header" aria-current="page">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#about" routerLink="/about" aria-current="page">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#technologies"
+            <a class="nav-link" href="#technologies" routerLink="/technologies" aria-current="page"
               >Education and Technologies</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="#portfolio" routerLink="/portfolio" aria-current="page">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#contact" routerLink="/contact" aria-current="page">Contact</a>
           </li>
           <li class="nav-item">
             <button
