modifiqué nombre del componente tecnologies a studies

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,7 +14,7 @@
           <a href="#about">About</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="#technologies">Education and Technologies</a>
+          <a href="#studies">Education and Skills</a>
         </li>
         <li class="list-inline-item footer-menu">
           <a href="#portfolio">Portfolio</a>
