--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -51,13 +51,13 @@
         <div class="row">
           <div class="col-md-4">
             <a
-              href="https://github.com/AlfonsinaGuido/Portfolio-Web.git"
+              href="https://github.com/AlfonsinaGuido/PortfolioWebBootstrap.git"
               class="btn topmargin-sm"
             >
               <img src="assets/images/bootstrap-logo.png" class="portfolio-logo" />
             </a>
             <a
-              href="https://github.com/AlfonsinaGuido/MiPortfolioConAngular.git"
+              href="https://github.com/AlfonsinaGuido/Front-End-Angular.git"
               class="btn topmargin-sm"
             >
               <img src="assets/images/Angular-logo.png" class="portfolio-logo" />
@@ -89,7 +89,7 @@
                 class="portfolio-logo"
               />
             </a>
-            <a href="" class="btn topmargin-sm">
+            <a href="https://github.com/AlfonsinaGuido/DataBase.git" class="btn topmargin-sm">
               <img src="assets/images/MySQL-logo.png" class="portfolio-logo" />
             </a>
             <a href="" class="btn topmargin-sm">
