--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-about></app-about>
-<app-technologies></app-technologies>
+<app-studies></app-studies>
 <app-portfolio></app-portfolio>
 <app-contact></app-contact>
 <app-footer></app-footer>
