--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,8 +29,8 @@
             <a class="nav-link" href="#about" routerLink="/about" aria-current="page">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#technologies" routerLink="/technologies" aria-current="page"
-              >Education and Technologies</a
+            <a class="nav-link" href="#studies" routerLink="/studies" aria-current="page"
+              >Education and Skills</a
             >
           </li>
           <li class="nav-item">
