--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -1,4 +1,4 @@
-<section id="technologies" class="divider">
+<section id="studies" class="divider">
     <div class="container-fluid">
       <div class="content-center">
         <h2>My studies and skills</h2>
@@ -109,7 +109,7 @@
           </div>
           <div class="d-flex justify-content-start">
             <div class="p-0 bd-highlight">
-              <img src="assets/images/Hard Skills.png" class="technologies-img" />
+              <img src="assets/images/Hard Skills.png" class="skills-img" />
             </div>
           </div>
           <div class="d-flex justify-content-end">
@@ -134,7 +134,7 @@
           </div>
           <div class="d-flex justify-content-start">
             <div class="p-0 bd-highlight">
-              <img src="assets/images/Soft Skills.png" class="technologies-img" />
+              <img src="assets/images/Soft Skills.png" class="skills-img" />
             </div>
           </div>
         </div>
