corregí problema de scroll

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@
     box-shadow: 0 6px 6px 0 rgba(120, 0, 0, 0.3);
     min-height: 100px;
     font-size: 25px; 
-    font-weight: 600
+    font-weight: 600;
 }
 
 .nav-link{ color: #ac0d0d;}
