--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<section id="portfolio" class="divider">
+<section id="portfolio" routerLink="/portfolio" class="divider">
     <div class="container-fluid">
       <div class="content-center">
         <h2>My projects</h2>
@@ -89,6 +89,7 @@
                 class="portfolio-logo"
               />
             </a>
+            <br>
             <a href="https://github.com/AlfonsinaGuido/DataBase.git" class="btn topmargin-sm">
               <img src="assets/images/MySQL-logo.png" class="portfolio-logo" />
             </a>
