--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -1,4 +1,4 @@
-<section id="studies" class="divider">
+<section id="studies" routerLink="/studies" class="divider">
     <div class="container-fluid">
       <div class="content-center">
         <h2>My studies and skills</h2>
@@ -17,6 +17,7 @@
         <div class="d-flex justify-content-start">
           <div class="p-1 bd-highlight">
             <div class="p-0 bd-highlight">
+              <br>
               <img
                 src="assets/images/Inti.png"
                 class="bg-dark-blue logo-brand"
