--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact">
+<section id="contact" routerLink="/contact">
     <div class="container">
       <div class="row">
         <div class="col-md-6 topmargin-sm">
