--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,21 +23,21 @@
       <div class="collapse navbar-collapse" id="MenuNavegacion">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#hero" routerLink="/header" aria-current="page">Home</a>
+            <a class="nav-link" href="#hero" aria-current="page">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about" routerLink="/about" aria-current="page">About</a>
+            <a class="nav-link" href="#about" aria-current="page">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#studies" routerLink="/studies" aria-current="page"
+            <a class="nav-link" href="#studies" aria-current="page"
               >Education and Skills</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio" routerLink="/portfolio" aria-current="page">Portfolio</a>
+            <a class="nav-link" href="#portfolio" aria-current="page">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact" routerLink="/contact" aria-current="page">Contact</a>
+            <a class="nav-link" href="#contact" aria-current="page">Contact</a>
           </li>
           <li class="nav-item">
             <button
@@ -119,7 +119,7 @@
     </div>
   </div>
   
-  <section id="hero" class="divider">
+  <section id="hero" routerLink="/header" class="divider">
     <div class="container">
       <div class="d-flex justify-content-end">
         <div class="p-1 bd-highlight">
