--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
 body {
     font-family: 'Titillium Web', sans-serif;
+    position: relative !important;
+    overflow:scroll !important;
 }
 
-section[id] {
+/* section[id] {
     scroll-margin-top: 80px;
-}
+} */
 
 h1 {font-size: 50px; font-weight: 600; line-height: 100px; text-shadow: black 1px 0 10px;}
 h2 {font-size: 45px; color: #ac0d0d; box-shadow: 0 6px 6px 0 rgba(120, 0, 0, 0.3); margin-bottom: 30px;}
