--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<section id="about" routerLink="/about" class="divider">
+<section id="about" class="divider">
     <div class="container-fluid">
       <div class="content-center">
         <h2>Who am I?</h2>
