--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -119,7 +119,7 @@
     </div>
   </div>
   
-  <section id="hero" routerLink="/header" class="divider">
+  <section id="hero" class="divider">
     <div class="container">
       <div class="d-flex justify-content-end">
         <div class="p-1 bd-highlight">
