--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<section id="portfolio" routerLink="/portfolio" class="divider">
+<section id="portfolio" class="divider">
     <div class="container-fluid">
       <div class="content-center">
         <h2>My projects</h2>
