--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -1,4 +1,4 @@
-<section id="studies" routerLink="/studies" class="divider">
+<section id="studies" class="divider">
     <div class="container-fluid">
       <div class="content-center">
         <h2>My studies and skills</h2>
