conecté backEnd con frontEnd

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <section id="about" class="divider">
     <div class="container-fluid">
       <div class="content-center">
-        <h2>Who am I?</h2>
+        <h2>Who I am?</h2>
         <div class="d-flex justify-content-end">
           <div class="p-1 bd-highlight">
             <button type="button" id="" class="edit-buttons">
@@ -20,10 +20,7 @@
             </button>
           </div>
         </div>
-        <h3>I am a <b>Web Developer</b> and a Graduate in Tourism</h3>
-        <p>
-          {{myPortfolio.about}}
-        </p>
+        <p>{{ persona.acerca }}</p>
       </div>
     </div>
   </section>
