--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -58,7 +58,7 @@
                 </p>
               </div>
               <div class="p-0 bd-highlight">
-                <p>{{myPortfolio.email}}</p>
+                <p>{{ persona.email }}</p>
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
                 </p>
               </div>
               <div class="p-0 bd-highlight">
-                <p>{{myPortfolio.phone}}</p>
+                <p>{{ persona.telefono }}</p>
               </div>
             </div>
           </div>
@@ -119,7 +119,7 @@
                 <input
                   type="email"
                   class="form-control"
-                  name="mail"
+                  name="email"
                   id=""
                   placeholder="Email"
                   required
