--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <h3>
-          {{myPortfolio.description}}
+          Framework, service platform, programming models and languages used for the development of this web portfolio
         </h3>
       </div>
   
@@ -90,7 +90,7 @@
               />
             </a>
             <br>
-            <a href="https://github.com/AlfonsinaGuido/DataBase.git" class="btn topmargin-sm">
+            <a href="" class="btn topmargin-sm">
               <img src="assets/images/MySQL-logo.png" class="portfolio-logo" />
             </a>
             <a href="" class="btn topmargin-sm">
