--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -5,7 +5,7 @@
         <div class="p-0 bd-highlight">
           <div class="d-flex justify-content-end">
             <div class="p-1 bd-highlight">
-              <button type="button" id="" class="edit-buttons">
+              <button type="button" id="" class="edit-buttons" routerLink="/nuevaedu" *ngIf="isLogged">
                 <ion-icon
                   style="background: none; border-radius: 0"
                   name="add-outline"
@@ -14,27 +14,28 @@
             </div>
           </div>
         </div>
-        <div class="d-flex justify-content-start">
+
+        <div class="d-flex justify-content-start" *ngFor="let Educacion of educacion">
           <div class="p-1 bd-highlight">
             <div class="p-0 bd-highlight">
               <br>
               <img
-                src="assets/images/Inti.png"
+                src="{{Educacion.logoE}}"
                 class="bg-dark-blue logo-brand"
                 alt="logo"
               />
             </div>
           </div>
           <div class="p-1 bd-highlight">
-            <h4><b>{{myPortfolio.training.certification}}</b></h4>
-            <h5>(<time>{{myPortfolio.training.start}}</time>-><time>{{myPortfolio.training.end}}</time>)</h5>
-            <h4><i>{{myPortfolio.training.name}}</i></h4>
+            <h3><b>{{Educacion.nombreE}}</b></h3>
+            <h4><time>{{Educacion.periodoAniosE}}</time></h4>
+            <h3><i>{{Educacion.descripcionE}}</i></h3>
           </div>
   
-          <div class="p-1 bd-highlight">
+          <div class="p-1 bd-highlight" *ngIf="isLogged">
             <div class="d-flex justify-content-end">
               <div class="p-1 bd-highlight">
-                <button type="button" id="" class="edit-buttons">
+                <button type="button" id="" class="edit-buttons" routerLink="/editedu/{{Educacion.id}}">
                   <ion-icon
                     style="background: none; border-radius: 0"
                     name="pencil-sharp"
@@ -42,41 +43,7 @@
                 </button>
               </div>
               <div class="p-1 bd-highlight">
-                <button type="button" id="" class="edit-buttons">
-                  <ion-icon
-                    style="background: none; border-radius: 0"
-                    name="trash-outline"
-                  ></ion-icon>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br />
-        <br />
-        <div class="d-flex justify-content-start">
-          <div class="p-1 bd-highlight">
-            <div class="p-0 bd-highlight">
-              <img src="assets/images/UNLa.png" class="logo-brand" alt="logo" />
-            </div>
-          </div>
-          <div class="p-1 bd-highlight align-self-center">
-            <h4><b>{{myPortfolio.school.title}}</b></h4>
-            <h5>(<time>{{myPortfolio.school.start}}</time>-><time>{{myPortfolio.school.end}}</time>)</h5>
-            <h4><i>{{myPortfolio.school.name}}</i></h4>
-          </div>
-          <div class="p-1 bd-highlight">
-            <div class="d-flex justify-content-end">
-              <div class="p-1 bd-highlight">
-                <button type="button" id="" class="edit-buttons">
-                  <ion-icon
-                    style="background: none; border-radius: 0"
-                    name="pencil-sharp"
-                  ></ion-icon>
-                </button>
-              </div>
-              <div class="p-1 bd-highlight">
-                <button type="button" id="" class="edit-buttons">
+                <button type="button" id="" class="edit-buttons" (click)="delete(Educacion.id)">
                   <ion-icon
                     style="background: none; border-radius: 0"
                     name="trash-outline"
@@ -110,7 +77,7 @@
           </div>
           <div class="d-flex justify-content-start">
             <div class="p-0 bd-highlight">
-              <img src="assets/images/Hard Skills.png" class="skills-img" />
+              <img src="{{persona.hardSkills}}" class="skills-img" />
             </div>
           </div>
           <div class="d-flex justify-content-end">
@@ -135,7 +102,7 @@
           </div>
           <div class="d-flex justify-content-start">
             <div class="p-0 bd-highlight">
-              <img src="assets/images/Soft Skills.png" class="skills-img" />
+              <img src="{{persona.softSkills}}" class="skills-img" />
             </div>
           </div>
         </div>
