--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<app-header></app-header>
-<app-about></app-about>
-<app-studies></app-studies>
-<app-portfolio></app-portfolio>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<div>
+    <router-outlet></router-outlet>
+</div>
