--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,26 +1,29 @@
 <section id="footer" class="bg-light-blue">
     <div class="container">
       <img
-        src="assets/images/LOGO.png"
+        src="{{ persona.logo }}"
         class="logo-brand"
         alt="logo"
         style="margin-bottom: 20px"
       />
       <ul class="list-inline">
         <li class="list-inline-item footer-menu">
-          <a href="#hero">Home</a>
+          <a href="home">Home</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="#about">About</a>
+          <a href="about">About</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="#studies">Education and Skills</a>
+          <a href="experience">Work Experience</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="#portfolio">Portfolio</a>
+          <a href="studies">Education and Skills</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="#contact">Contact</a>
+          <a href="portfolio">Portfolio</a>
+        </li>
+        <li class="list-inline-item footer-menu">
+          <a href="contact">Contact</a>
         </li>
       </ul>
       <ul class="list-inline">
@@ -45,8 +48,7 @@
         </li>
       </ul>
       <small
-        >{{myPortfolio.myPhrase}}
-        <b>Believe in yourself</b>
+        >Try, fail and try again. That is the path to success. <b>Believe in yourself </b>
         <ion-icon
           style="
             color: #eb671b;
