--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -2,3 +2,8 @@
     max-width: 200px;
     height: 100px;
 }
+
+h2 { font-size: 30px; line-height: normal; }
+
+@media (max-width: 576px) { 
+    h2 { font-size: 25px; line-height: normal; }}
