--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,7 @@ body {
     overflow: scroll !important;
 }
 
-/* section[id] {
-    scroll-margin-top: 80px;
-} */
 
-h1 {font-size: 50px; font-weight: 600; line-height: 100px; text-shadow: black 1px 0 10px;}
 h2 {font-size: 45px; color: #ac0d0d; box-shadow: 0 6px 6px 0 rgba(120, 0, 0, 0.3); margin-bottom: 30px;}
 h3 {font-size: 30px; margin-bottom: 20px;}
 
@@ -52,16 +48,6 @@ section {
     color: #ffffff;
     border: 2px solid #1a1a1a;
 }
-
-/* .btn-transparent {
-    background-color: transparent;
-    color: #ffffff;
-    border: 2px solid #ffffff;
-} */
-
-/* .btn-transparent:hover { 
-    color: #ffffff;
-} */
 
 .full-width {
     width: 100%;
@@ -147,8 +133,14 @@ ion-icon:focus {
 
     h1 { font-size: 35px; line-height: normal; }
     h2 { font-size: 33px; line-height: normal; }
+    h3 { font-size: 25px; line-height: normal; }
     h4 { font-size: 19px; line-height: normal; }
     h5 { font-size: 14px; line-height: normal; }
+    p { font-size: 19px; line-height: normal; }
+    
+    .edit-buttons {
+        font-size: 20px;
+    }
 
     .footer-menu {
         display: block !important;
