--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,10 +17,13 @@
           <a href="experience">Work Experience</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="studies">Education and Skills</a>
+          <a href="studies">Education</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="portfolio">Portfolio</a>
+          <a href="skills">Skills</a>
+        </li>
+        <li class="list-inline-item footer-menu">
+          <a href="projects">Projects</a>
         </li>
         <li class="list-inline-item footer-menu">
           <a href="contact">Contact</a>
@@ -28,18 +31,18 @@
       </ul>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="https://www.linkedin.com/in/alfonsina-guido/"
+          <a href="https://www.linkedin.com/in/alfonsina-guido/" target="_blank"
             ><ion-icon style="color: #5c0303" name="logo-linkedin"></ion-icon
           ></a>
         </li>
         <li class="list-inline-item">
-          <a href="https://www.instagram.com/alfonsinaguido/"
+          <a href="https://www.instagram.com/alfonsinaguido/" target="_blank"
             ><ion-icon style="color: #5c0303" name="logo-instagram"></ion-icon
           ></a>
         </li>
         <li class="list-inline-item">
           <a
-            href="https://www.google.com.ar/maps/place/Santa+Anita,+Entre+R%C3%ADos/@-39.8419731,-69.8897935,4.5z/data=!4m5!3m4!1s0x95b1bed65cf67ced:0x9d5d964830dfda26!8m2!3d-32.1757845!4d-58.7861762"
+            href="https://www.google.com.ar/maps/place/Santa+Anita,+Entre+R%C3%ADos/@-39.8419731,-69.8897935,4.5z/data=!4m5!3m4!1s0x95b1bed65cf67ced:0x9d5d964830dfda26!8m2!3d-32.1757845!4d-58.7861762" target="_blank"
             ><ion-icon
               style="color: #5c0303"
               name="location-outline"
