--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,4 +1,6 @@
-h2 { font-size: 30px; line-height: normal; }
+h3 { font-size: 28px; line-height: normal; }
 
 @media (max-width: 576px) { 
-    h2 { font-size: 25px; line-height: normal; }}
+    h3 { font-size: 20px; line-height: normal; }
+    p { font-size: 17px; line-height: normal; }
+}
