--- a/src/app/components/portfolioweb/portfolioweb.component.html
+++ b/src/app/components/portfolioweb/portfolioweb.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
+<app-datos-personales></app-datos-personales>
 <app-about></app-about>
 <app-experience></app-experience>
 <app-studies></app-studies>
-<app-portfolio></app-portfolio>
+<app-skills></app-skills>
+<app-projects></app-projects>
 <app-contact></app-contact>
 <app-footer></app-footer>
