--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -1,7 +1,7 @@
 <section id="studies" class="divider">
     <div class="container-fluid">
       <div class="content-center">
-        <h2>My studies and skills</h2>
+        <h2>My studies</h2>
         <div class="p-0 bd-highlight">
           <div class="d-flex justify-content-end">
             <div class="p-1 bd-highlight">
@@ -50,59 +50,6 @@
                   ></ion-icon>
                 </button>
               </div>
-            </div>
-          </div>
-        </div>
-  
-        <div class="container-fluid">
-          <div class="d-flex justify-content-end">
-            <div class="p-1 bd-highlight">
-              <button type="button" id="" class="edit-buttons">
-                <ion-icon
-                  style="background: none; border-radius: 0"
-                  name="add-outline"
-                ></ion-icon>
-              </button>
-            </div>
-          </div>
-          <div class="d-flex justify-content-end">
-            <div class="p-1 bd-highlight">
-              <button type="button" id="" class="edit-buttons">
-                <ion-icon
-                  style="background: none; border-radius: 0"
-                  name="trash-outline"
-                ></ion-icon>
-              </button>
-            </div>
-          </div>
-          <div class="d-flex justify-content-start">
-            <div class="p-0 bd-highlight">
-              <img src="{{persona.hardSkills}}" class="skills-img" />
-            </div>
-          </div>
-          <div class="d-flex justify-content-end">
-            <div class="p-1 bd-highlight">
-              <button type="button" id="" class="edit-buttons">
-                <ion-icon
-                  style="background: none; border-radius: 0"
-                  name="add-outline"
-                ></ion-icon>
-              </button>
-            </div>
-          </div>
-          <div class="d-flex justify-content-end">
-            <div class="p-1 bd-highlight">
-              <button type="button" id="" class="edit-buttons">
-                <ion-icon
-                  style="background: none; border-radius: 0"
-                  name="trash-outline"
-                ></ion-icon>
-              </button>
-            </div>
-          </div>
-          <div class="d-flex justify-content-start">
-            <div class="p-0 bd-highlight">
-              <img src="{{persona.softSkills}}" class="skills-img" />
             </div>
           </div>
         </div>
