--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,6 @@ body {
     overflow: scroll !important;
 }
 
-
 h2 {font-size: 45px; color: #ac0d0d; box-shadow: 0 6px 6px 0 rgba(120, 0, 0, 0.3); margin-bottom: 30px;}
 h3 {font-size: 30px; margin-bottom: 20px;}
 
@@ -152,26 +151,20 @@ ion-icon:focus {
         min-width: 60px;
         max-width: 60px;
     }
-    .skills-img {
-        max-width: 250px !important;
-    }
+    
     .portfolio-logo {
         max-width: 120px !important;
         max-height: 80px !important;
     }
 }
 
-@media (min-width: 576px) and (max-width: 768px) { 
-    .skills-img {
-        max-width: 500px !important;
-    }
+/* @media (min-width: 576px) and (max-width: 768px) { 
+   
  }
 
 @media (min-width: 768px) { 
-    .skills-img {
-        max-width: 700px !important;
-    }
- }
+    
+ } */
 
 /* @media (min-width: 992px) { ... }
 
