Finalizo primera versión Angular

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,4 +1,6 @@
 h2 { font-size: 30px; line-height: normal; }
 
 @media (max-width: 576px) { 
-    h2 { font-size: 25px; line-height: normal; }}
+    h2 { font-size: 25px; line-height: normal; }
+    p { font-size: 17px; line-height: normal; }
+}
