--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -6,7 +6,7 @@
             <div class="p-0 bd-highlight">
                 <div class="d-flex justify-content-end">
                   <div class="p-1 bd-highlight">
-                    <button type="button" id="" class="edit-buttons" routerLink="/nuevaexp" *ngIf="isLogged">
+                    <button type="button" class="edit-buttons" routerLink="/nuevaexp" *ngIf="isLogged">
                       <ion-icon
                         style="background: none; border-radius: 0"
                         name="add-outline"
@@ -36,7 +36,7 @@
                 <div class="p-1 bd-highlight" *ngIf="isLogged">
                   <div class="d-flex justify-content-end">
                     <div class="p-1 bd-highlight">
-                      <button type="button" id="" class="edit-buttons" routerLink="/editexp/{{Experiencia.id}}">
+                      <button type="button" class="edit-buttons" routerLink="/editexp/{{Experiencia.id}}">
                         <ion-icon
                           style="background: none; border-radius: 0"
                           name="pencil-sharp"
@@ -44,7 +44,7 @@
                       </button>
                     </div>
                     <div class="p-1 bd-highlight">
-                      <button type="button" id="" class="edit-buttons" (click)="delete(Experiencia.id)">
+                      <button type="button" class="edit-buttons" (click)="delete(Experiencia.id)">
                         <ion-icon
                           style="background: none; border-radius: 0"
                           name="trash-outline"
