--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -62,5 +62,9 @@
           name="sparkles-outline"
         ></ion-icon
       ></small>
+      <br>
+      <small
+        ><b>Copyright © 2022 YAG</b>
+      </small>
     </div>
   </section>
