--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,4 +1,7 @@
 h2 { font-size: 30px; line-height: normal; }
 
 @media (max-width: 576px) { 
-    h2 { font-size: 25px; line-height: normal; }}
+    h2 { font-size: 25px; line-height: normal; }
+    h3 { font-size: 18px; line-height: normal; }
+    p { font-size: 17px; line-height: normal; }
+}
