corrijo posición de Navbar

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,31 +19,31 @@
     <div class="collapse navbar-collapse" id="MenuNavegacion">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="home" aria-current="page">Home</a>
+          <a class="nav-link" href="#home" aria-current="page">Home</a>
         </li>
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="about" aria-current="page">About</a>
+          <a class="nav-link" href="#about" aria-current="page">About</a>
         </li>
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="experience" aria-current="page">Work Experience</a>
+          <a class="nav-link" href="#experience" aria-current="page">Work Experience</a>
         </li>
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="studies" aria-current="page"
+          <a class="nav-link" href="#studies" aria-current="page"
             >Education</a
           >
         </li>
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="skills" aria-current="page"
+          <a class="nav-link" href="#skills" aria-current="page"
             >Skills</a
           >
         </li>
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="projects" aria-current="page"
+          <a class="nav-link" href="#projects" aria-current="page"
             >Projects</a
           >
         </li>
         <li class="nav-item" style="padding: 0px 20px">
-          <a class="nav-link" href="contact" aria-current="page">Contact</a>
+          <a class="nav-link" href="#contact" aria-current="page">Contact</a>
         </li>
         <li class="nav-item" style="padding: 0px 20px">
           <button type="button" class="btn btn-outline-primary" style= "font-size: 20px; 
