--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,25 +8,25 @@
       />
       <ul class="list-inline">
         <li class="list-inline-item footer-menu">
-          <a href="home">Home</a>
+          <a href="#home">Home</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="about">About</a>
+          <a href="#about">About</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="experience">Work Experience</a>
+          <a href="#experience">Work Experience</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="studies">Education</a>
+          <a href="#studies">Education</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="skills">Skills</a>
+          <a href="#skills">Skills</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="projects">Projects</a>
+          <a href="#projects">Projects</a>
         </li>
         <li class="list-inline-item footer-menu">
-          <a href="contact">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
       </ul>
       <ul class="list-inline">
