--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@ body {
     overflow: scroll !important;
 }
 
+section[id] {
+    scroll-margin-top: 80px;
+}
+
 h2 {font-size: 45px; color: #ac0d0d; box-shadow: 0 6px 6px 0 rgba(120, 0, 0, 0.3); margin-bottom: 30px;}
 h3 {font-size: 30px; margin-bottom: 20px;}
 
